# Rooted-CPP-Project

./: README.md  settings.gradle
app/: build.gradle  google-services.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/androidTest/java/com/vip/djgaming/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: abcd.txt
app/src/main/cpp/: CMakeLists.txt  DcXMoveWithFlyMap.h  DrawEsp.h  MemoryReader.cpp  PowerTypes.h  Server.cpp  Socket.cpp  Socket.h  djgaming.cpp  il2cpp.h  standalone_reader.cpp
app/src/main/cpp/Unity/: ESP.h  Unity.h  Vector3.hpp
app/src/main/cpp/game/: game.cpp  game.hpp  offsets.h  player.hpp  utils.hpp
app/src/main/cpp/static/include/: dobby.h
app/src/main/cpp/ui/: cfg.hpp  menu.cpp  menu.hpp
app/src/main/java/com/vip/djgaming/: FloatingActivity.java  GlowingTriangleParticles.java  MainActivity.java
app/src/main/res/drawable/: box_1.xml  box_2.xml  btn_gradient_youtube.xml  btn_outline_dark.xml  edittext_bg.xml  floating_bg.xml  ic_notifications.xml  ic_rocket.xml  ic_youtube_white.xml  icon_album_round.xml  icon_memory_round.xml  icon_my_location_round.xml  rounded_corners.xml  subscribe_card_bg.xml  thumb.xml  track.xml
app/src/main/res/layout/: floating.xml  main.xml  subscribe.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/vip/djgaming/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
